# Performance-Tracker

./: .gitignore  AbstractFactory.hpp  AbstractProduct.hpp  CMakeLists.txt  Category.cpp  Category.hpp  CompositeInput.hpp  ConcreteFactory.hpp  FactoryTesting.cpp  FactoryTests.hpp  Makefile  PlaylistSubclasses.hpp  README.md  Task.cpp  Task.hpp  Testing.cpp  UserGuide.hpp  add_task_test.hpp  artistAlphabetical.hpp  compositeTest.hpp  main  main.cpp  songAlphabetical.hpp  songLength.hpp  strategy.hpp  strategyTests.hpp  test
